--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -76,7 +76,7 @@ jobs:
                   
     release:
         needs: [npm, gp]
-        if: always() && (needs.ci.result == 'success' || needs.ci.result == 'skipped')
+        if: always() && (needs.npm.result == 'success' || needs.gp.result == 'success')
         name: Post new release
         runs-on: ubuntu-latest
         steps:
@@ -84,7 +84,7 @@ jobs:
             
             - name: Get the version
               id: version
-              run: echo name=$(echo $GITHUB_REF | cut -d / -f 3) >> $GITHUB_OUTPUT
+              run: echo name=v$(jq '.version' package.json -r) >> $GITHUB_OUTPUT
               
             - name: Post release
               run: gh release create ${{ steps.version.outputs.name }} --target main --generate-notes --prerelease;
