--- a/.github/workflows/package-publish.yml
+++ b/.github/workflows/package-publish.yml
@@ -8,19 +8,20 @@ on:
                 description: Skip CI
                 required: false
                 default: false
-    release:
-        types: [published]
+    push:
+        tags:
+            - '*'
 
 jobs:
-    CI:
+    ci:
         name: CI
         if: ${{ inputs.skip-ci == false }}
         uses: zenfuse/zenfuse.js/.github/workflows/package-ci.yml@main
 
-    publish-npm:
+    npm:
         name: Publish to npm
-        needs: CI
-        if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
+        needs: ci
+        if: always() && (needs.ci.result == 'success' || needs.ci.result == 'skipped')
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -34,14 +35,18 @@ jobs:
               run: npm ci
               
             - name: Publish to npm registry
-              run: npm publish --access public
+              run: |
+                # Change publish registry
+                echo "$(jq '.publishConfig.registry = "https://registry.npmjs.org"' package.json)" > package.json
+                # Publish package
+                npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-    publish-gp:
+    gp:
         name: Publish to gp
-        needs: CI
-        if: always() && (needs.CI.result == 'success' || needs.CI.result == 'skipped')
+        needs: ci
+        if: always() && (needs.ci.result == 'success' || needs.ci.result == 'skipped')
         permissions:
             contents: read
             packages: write
@@ -59,6 +64,8 @@ jobs:
             
             - name: Publish to github registry
               run: |
+                # Change publish registry
+                echo "$(jq '.publishConfig.registry = "https://npm.pkg.github.com"' package.json)" > package.json
                 # Add organisation scope to package name
                 echo "$( jq '.name = "@zenfuse/zenfuse"' package.json )" > package.json
                 # And publish this boy 
@@ -66,3 +73,26 @@ jobs:
 
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  
+    release:
+        needs: [npm, gp]
+        if: always() && (needs.npm.result == 'success' && needs.gp.result == 'success')
+        name: Post new release
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            
+            - name: Get the version
+              id: version
+              run: echo name=$(jq '.version' package.json -r) >> $GITHUB_OUTPUT
+              
+            - name: Post release
+              run: gh release create v${{ steps.version.outputs.name }} --target main --generate-notes --prerelease;
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                
+            - name: Set output
+              run: | 
+                echo "### New release v${{ steps.version.outputs.name }}" >> $GITHUB_STEP_SUMMARY
+                echo "#### https://www.npmjs.com/package/zenfuse/v/${{ steps.version.outputs.name }}" >> $GITHUB_STEP_SUMMARY
+                echo "#### https://github.com/zenfuse/zenfuse.js/releases/tag/v${{ steps.version.outputs.name }}" >> $GITHUB_STEP_SUMMARY
