--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
     "description": "Crypto exchanges connector library",
     "main": "src/index.js",
     "scripts": {
-        "test": "npm run test:unit --silent && npm run test:integration --silent",
-        "test:e2e": "TEST_MODE=e2e npm run jest --silent",
-        "test:integration": "TEST_MODE=integration npm run jest --silent",
-        "test:unit": "TEST_MODE=unit jest --testMatch '**/?(*.)+(spec).js'",
-        "jest": "node --unhandled-rejections=strict node_modules/.bin/jest --no-cache --runInBand",
-        "format": "eslint --fix .; prettier --write .",
-        "lint": "eslint .",
-        "download-mocks": "node ./scripts/downloadMocks.js",
-        "remove-artifacts": "git clean -xf",
-        "build:types": "tsc"
+        "test": "just test unit && just test integration",
+        "test:e2e": "just test e2e",
+        "test:integration": "just test integration",
+        "test:unit": "just test unit",
+        "format": "just format",
+        "lint": "just lint",
+        "download-mocks": "just download-mocks"
     },
     "repository": {
         "type": "git",
@@ -37,7 +34,7 @@
     "author": "zenfuse.io",
     "license": "AGPL-3.0-or-later",
     "engines": {
-        "node": ">=12",
+        "node": ">=14",
         "npm": ">=6"
     },
     "bugs": {
@@ -56,11 +53,12 @@
         "eslint-plugin-jest": "^26.1.1",
         "eslint-plugin-jsdoc": "^38.0.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "jest": "^27.5.1",
+        "jest": "^29.0.1",
+        "just-install": "^1.0.8",
         "mri": "^1.2.0",
         "nock": "^13.2.4",
         "prettier": "^2.4.1",
-        "tasuku": "^1.0.2",
+        "tasuku": "^2.0.0",
         "typescript": "^4.6.2"
     },
     "dependencies": {
