--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -47,6 +47,8 @@ jobs:
         name: Preparing mocks
         needs: lint
         if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
+        
+        # Preparing mocks are running on self-hosted runner because GitHub runner location can be different and exchange can respond with 451 Unavailable For Legal Reasons
         runs-on: self-hosted
         steps:
             - uses: actions/checkout@v3
