--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -21,8 +21,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - name: Install latest just release
-              uses: taiki-e/install-action@just
+            - uses: taiki-e/install-action@v2
+              with:
+                  tool: just
+              
             - name: Set up Bun
               uses: antongolub/action-setup-bun@v1
               with:
@@ -52,8 +54,9 @@ jobs:
         runs-on: self-hosted
         steps:
             - uses: actions/checkout@v3
-            - name: Install latest just release
-              uses: taiki-e/install-action@just
+            - uses: taiki-e/install-action@v2
+              with:
+                  tool: just
             - uses: actions/setup-node@v3
               with:
                   cache: 'npm'
@@ -87,8 +90,9 @@ jobs:
                 node-version: [14, 16, 18]
         steps:
             - uses: actions/checkout@v3
-            - name: Install latest just release
-              uses: taiki-e/install-action@just
+            - uses: taiki-e/install-action@v2
+              with:
+                  tool: just
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
@@ -110,8 +114,9 @@ jobs:
                 node-version: [14, 16, 18]
         steps:
             - uses: actions/checkout@v3
-            - name: Install latest just release
-              uses: taiki-e/install-action@just
+            - uses: taiki-e/install-action@v2
+              with:
+                  tool: just
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
