--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dependencies": {
         "deepmerge": "^4.2.2",
         "got": "^11.8.2",
+        "mock-socket": "^9.1.5",
         "ws": "^8.5.0",
         "zod": "^3.13.4"
     },
