--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -24,7 +24,7 @@ jobs:
             - uses: taiki-e/install-action@v2
               with:
                   tool: just
-              
+
             - name: Set up Bun
               uses: antongolub/action-setup-bun@v1
               with:
@@ -32,7 +32,11 @@ jobs:
 
             - uses: actions/setup-node@v3
               with:
+                  node-version-file: '.nvmrc'
                   cache: 'npm'
+
+            - name: Update npm to latest
+              run: npm i -g npm@9 --registry=https://registry.npmjs.org
 
             - name: Install npm dependencies
               run: npm ci
@@ -42,14 +46,14 @@ jobs:
 
             - name: Lint javascript files
               run: just eslint
-              
+
             - name: Cpellcheck all files
               run: just cspell
     mocks:
         name: Preparing mocks
         needs: lint
         if: always() && (needs.lint.result == 'success' || needs.lint.result == 'skipped')
-        
+
         # Preparing mocks are running on self-hosted runner because GitHub runner location can be different and exchange can respond with 451 Unavailable For Legal Reasons
         runs-on: self-hosted
         steps:
@@ -59,7 +63,11 @@ jobs:
                   tool: just
             - uses: actions/setup-node@v3
               with:
+                  node-version-file: '.nvmrc'
                   cache: 'npm'
+
+            - name: Update npm to latest
+              run: npm i -g npm@9 --registry=https://registry.npmjs.org
 
             - name: Install npm dependencies
               run: npm ci
@@ -99,6 +107,9 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
 
+            - name: Update npm to latest
+              run: npm i -g npm@9 --registry=https://registry.npmjs.org
+
             - name: Install npm dependencies
               run: npm ci
 
@@ -122,6 +133,9 @@ jobs:
               with:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
+
+            - name: Update npm to latest
+              run: npm i -g npm@9 --registry=https://registry.npmjs.org
 
             - name: Download static mocks
               uses: actions/download-artifact@v3.0.2
