Add just comand

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Comprehensive crypto trading library",
     "main": "src/index.cjs",
     "scripts": {
+        "just": "just",
         "test": "just test unit && just test integration",
         "test:e2e": "just test e2e",
         "test:integration": "just test integration",
