--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -47,7 +47,7 @@ jobs:
             - name: Lint javascript files
               run: just eslint
     mocks:
-        uses: .github/workflows/mocks.yml@main
+        uses: ./mocks.yml
 
     unit-tests:
         needs: lint
