--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -8,6 +8,7 @@ jobs:
     mocks_github:
         name: Preparing mocks
         runs-on: ubuntu-latest
+        continue-on-error: true
         steps:
             - uses: actions/checkout@v3
             - uses: taiki-e/install-action@v2
@@ -39,10 +40,11 @@ jobs:
                   name: static-mocks
                   path: tests/exchanges/*/mocks/static/*
                   if-no-files-found: error
-                  retention-days: 1
+                  retention-days: 90
     
     mocks_alt:
         name: Prepare mocks using self hosted runner
+        needs: mocks_github
         if: failure()
 
         # Preparing mocks are running on self-hosted runner because GitHub runner location can be different and exchange can respond with 451 Unavailable For Legal Reasons
@@ -78,4 +80,4 @@ jobs:
                   name: static-mocks
                   path: tests/exchanges/*/mocks/static/*
                   if-no-files-found: error
-                  retention-days: 1
+                  retention-days: 90
