--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
     mocks_github:
-        name: Preparing mocks
         runs-on: ubuntu-latest
         continue-on-error: true
         steps:
@@ -43,9 +42,8 @@ jobs:
                   retention-days: 90
     
     mocks_alt:
-        name: Prepare mocks using self hosted runner
         needs: mocks_github
-        if: failure()
+        if: ${{ always() && contains(needs.*.result, 'failure') }}
 
         # Preparing mocks are running on self-hosted runner because GitHub runner location can be different and exchange can respond with 451 Unavailable For Legal Reasons
         runs-on: ubuntu-latest
