--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -43,7 +43,7 @@ jobs:
     
     mocks_alt:
         needs: mocks_github
-        if: failure()
+        if: always() && contains(join(needs.*.result, ','), 'success')
 
         # Preparing mocks are running on self-hosted runner because GitHub runner location can be different and exchange can respond with 451 Unavailable For Legal Reasons
         runs-on: ubuntu-latest
