--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -46,7 +46,7 @@ jobs:
         if: always() && contains(join(needs.*.result, ','), 'success')
 
         # Preparing mocks are running on self-hosted runner because GitHub runner location can be different and exchange can respond with 451 Unavailable For Legal Reasons
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             - uses: actions/checkout@v3
             - uses: taiki-e/install-action@v2
