--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,10 @@ version: 2
 updates:
     - package-ecosystem: 'npm'
       directory: '/'
+      groups:
+          update-types:
+              - "minor"
+              - "patch"
       schedule:
           interval: 'daily'
       reviewers:
