--- a/.github/workflows/package-ci.yml
+++ b/.github/workflows/package-ci.yml
@@ -102,6 +102,7 @@ jobs:
               with:
                   name: static-mocks
                   path: tests/exchanges
+                  fail-on-cache-miss: true
 
             - name: Install npm dependencies
               run: npm ci
