--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -29,6 +29,7 @@ jobs:
               with:
                   path: tests/exchanges/*/mocks/static/*
                   key: static-mocks
+                  restore-keys: static-mocks
 
             - name: Download mock files from exchanges
               run: just download-mocks
@@ -68,6 +69,7 @@ jobs:
               with:
                   path: tests/exchanges/*/mocks/static/*
                   key: static-mocks
+                  restore-keys: static-mocks
 
             - name: Download mock files from exchanges
               run: just download-mocks
