--- a/.github/workflows/mocks.yml
+++ b/.github/workflows/mocks.yml
@@ -68,8 +68,8 @@ jobs:
               uses: actions/cache@v3.3.1
               with:
                   path: tests/exchanges/*/mocks/static/*
-                  key: static-mocks-${{ hashFiles('tests/exchanges/*/mocks/static/*') }}
-                  restore-keys: static-mocks-*
+                  key: static-mocks
+                  restore-keys: static-mocks
 
             - name: Download mock files from exchanges
               run: just download-mocks
@@ -77,7 +77,7 @@ jobs:
             - name: Upload static mocks
               uses: actions/upload-artifact@v3.1.2
               with:
-                  name: static-mocks-${{ hashFiles('tests/exchanges/*/mocks/static/*') }}
+                  name: static-mocks
                   path: tests/exchanges/*/mocks/static/*
                   if-no-files-found: error
                   retention-days: 90
